using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using CharacterSystem;

public class MonsterProgression : CharacterProgression
{
}
